--- a/assets/style.css
+++ b/assets/style.css
@@ -17,21 +17,22 @@
 
 html {
   font-size: 62.5%;
-  margin: 0 auto;
 }
 
 body {
   font-family: "Merriweather Sans", sans-serif;
   background-color: var(--body-bg-color);
   color: var(--text-color);
+  width: 100%;
+  max-width: 144rem;
   align-items: center;
+  margin: 0 auto;
   padding: 4rem 4rem 0 4rem;
 }
 
 .container{
   display: flex;
-  justify-content:center;
-  align-items:flex-start;
+  justify-content: center;
   width: 100%;
   font-family: "Merriweather Sans", sans-serif;
   background-color: var(--body-bg-color);
@@ -56,18 +57,17 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: auto;
 }
 
 section {
   display: flex;
-  height: auto;
   flex-direction: column;
   gap: 3rem;
 }
 
 footer {
   display: flex;
+  justify-content: flex-end;
 }
 
 .footer {
@@ -85,18 +85,21 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: auto;
   background-color: var(--bg-cards);
   border-radius: 2rem;
   padding: 3rem;
 }
 
 .perfil h1 {
+  position: relative;
   text-align: center;
   font-size: 2rem;
   padding-top: 2rem;
 }
 
 .perfil h2 {
+  position: relative;
   text-align: center;
   font-size: 1rem;
   padding-top: 0.5rem;
@@ -138,6 +141,10 @@ footer {
   column-gap: 2rem;
 }
 
+.links a{
+    position: relative;
+}  
+
 /* -------- BOX-TECHS -------- */
 
 .techs {
@@ -174,6 +181,11 @@ footer {
   flex-direction: row;
   font-size: 2rem;
   margin-bottom: 2rem;
+}
+
+.techs a{
+  position: relative;
+  color: var(--bg-cards);
 }
 
 /* -------- BOX-EXP -------- */
@@ -290,6 +302,10 @@ section .github-2 {
   gap: 1rem;
 }
 
+.project-name-1 a{
+  position: relative;
+}
+
 .github p{
   display: flex;
   align-items: center;
@@ -378,4 +394,189 @@ section .posts-box {
   align-items: center;
   justify-content: space-between;
   gap: 3rem;
+}
+
+/* ----------- ANIMAÇÕES ----------- */
+
+.links a::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  border-radius: 4px;
+  background-color: #00FF00;
+  bottom: 0;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform .3s ease-in-out;
+}
+
+.links a:hover::before {
+  transform-origin: left;
+  transform: scaleX(1);
+}
+
+.perfil h1::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  border-radius: 4px;
+  background-color: #00FF00;
+  bottom: 0;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform .3s ease-in-out;
+}
+
+.perfil h1:hover::before {
+  transform-origin: left;
+  transform: scaleX(1);
+}
+
+.project-name-1 a::before{
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  border-radius: 4px;
+  background-color: #00FF00;
+  bottom: 0;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform .3s ease-in-out;
+}
+
+.project-name-1 a:hover::before{
+  transform-origin: left;
+  transform: scaleX(1);
+}
+
+
+@-webkit-keyframes spaceboots {
+  0% {
+      -webkit-transform: translate(2px, 1px) rotate(0deg);
+  }
+  10% {
+      -webkit-transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+      -webkit-transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+      -webkit-transform: translate(0px, 2px) rotate(0deg);
+  }
+  40% {
+      -webkit-transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+      -webkit-transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+      -webkit-transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+      -webkit-transform: translate(2px, 1px) rotate(-1deg);
+  }
+  80% {
+      -webkit-transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+      -webkit-transform: translate(2px, 2px) rotate(0deg);
+  }
+  100% {
+      -webkit-transform: translate(1px, -2px) rotate(-1deg);
+  }
+}
+.shake:hover, .shake:focus {
+  -webkit-animation-name: spaceboots;
+  -webkit-animation-duration: 0.8s;
+  -webkit-transform-origin: 50% 50%;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+}
+.shake {
+  display: block;
+  position: relative;
+}
+.shake, .shake.inline {
+  display: inline-block
+}
+
+/* ----------- RESPONSIDADE ----------- */
+
+@media (max-width: 1070px) {
+  section .github {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 3rem;
+  }
+}
+
+@media (max-width: 1000px) {
+  .container{
+    flex-direction: column;
+  }
+
+  aside{
+    width: 100%;
+    max-width: 92rem;
+    margin-bottom: 3rem;
+  }
+
+}
+
+@media (max-width: 670px) {
+  body {
+    justify-content: center;
+    padding: 2rem 2rem 0 2rem;
+  }
+  
+  section{
+    width: 100%;
+    min-width: 37.5rem;
+  }
+
+  section .posts-box{
+    flex-direction: column;
+  }
+
+  section .hashtags{
+    gap: 1rem;
+  }
+
+  section h2{
+    padding-top: 1rem;
+  }
+
+}
+
+@media (max-width: 420px) {
+  body {
+    justify-content: center;
+    padding: 2rem 2rem 0 2rem;
+  }
+  
+  aside{
+    width: 100%;
+    min-width: 32.5rem;
+  }
+
+  section{
+    width: 100%;
+    min-width: 32.5rem;
+  }
+
+  section .posts-box{
+    flex-direction: column;
+  }
+
+  footer{
+    width: 100%;
+    min-width: 32.5rem;
+  }
 }
